// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product detail in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FAFAF8",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#8C8C85",
          }
        }
      >
        Loading product…
      </Text>
    </View>
  </View>
</View>
`;

exports[`product detail in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#111512",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#B7BDB7",
          }
        }
      >
        Loading product…
      </Text>
    </View>
  </View>
</View>
`;
